update por hql em concluido

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,12 +2,12 @@ jdbc.driverClassName=org.h2.Driver
 #jdbc.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
 jdbc.url=jdbc:h2:file:/home/vinicius/Downloads/myDb;DB_CLOSE_DELAY=-1
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=none
-
-spring.jpa.open-in-view=disable
+hibernate.hbm2ddl.auto=create
 
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.username=sa
 spring.datasource.password=
+
+spring.jpa.open-in-view=false
